--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.7.8",
+    "emailjs-com": "^3.2.0",
     "nodemailer": "^6.9.16",
     "nuxt": "^3.14.1592",
     "vue": "latest",
